# outer-frontiers

./: .gitattributes  Cargo.toml  Dockerfile.test  LICENSE-MIT  README.md
assets/models/: dragoon.glb  infiltrator.glb  praetor.glb  zenith_station.glb
assets/textures/: space_cubemap_astc.ktx2
resources/: dragoon.blend  infiltrator.blend  praetor.blend  zenith_station.blend
src/: assets.rs  main.rs  models.rs  weapon.rs
