[package]
name = "outer-frontiers"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]
edition = "2021"

# Enable max optimizations for dependencies, making debug build mach faster
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Keep only what is really used to keep binary small and compilation fast
bevy = { version = "0.12", default-features = false, features = [
  # Core 3D features
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_winit",
  "multi-threaded",
  # For skybox compressed texture
  "ktx2",
  "zstd",
  # For gltf assets
  "bevy_gltf",
  "tonemapping_luts", # for correct material loading

  "webgl2", # For wasm target
  # Might be used in the future
  # "wayland", # For linux support on CI
  # Other
  # "bevy_audio",
  # "bevy_text",
  # "bevy_ui",
  # "default_font",
] }
bevy-inspector-egui = "0.21"
bevy_asset_loader = "0.18"
# Check performance with "simd-stable" or "parallel"
bevy_rapier3d = { version = "0.23", default-features = false, features = ["dim3", "debug-render-3d"]}
# bevy_common_assets = "0.7" # for loading assets from yaml/json
