[package]
name = "outer-frontiers"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Stepan Kizim <stsiapan.kizim@gmail.com>"]
edition = "2021"

# Enable max optimizations for dependencies, making debug build mach faster
[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Keep only what is really used to keep binary small and compilation fast
bevy = { version = "0.14.1", default-features = false, features = [
  # Core features
  "bevy_winit",
  "multi_threaded",
  # 3D rendering
  "bevy_pbr",
  "tonemapping_luts", # for correct material loading and tonemapping
  # For skybox compressed texture
  "ktx2",
  "zstd",
  "png",
  # For gltf assets
  "bevy_gltf",
  # Platform support
  "webgl2", # For wasm target support
  "wayland", # For linux support
] }
bevy-inspector-egui = "0.25"
bevy_asset_loader = { version = "0.21", features = ["standard_dynamic_assets"] }
# Check performance with "simd-stable" or "parallel"
bevy_rapier3d = { version = "0.27", default-features = false, features = ["dim3", "debug-render-3d"]}
# bevy_common_assets = "0.7" # for loading assets from yaml/json
tracing = { version = "0.1", optional = true }

[features]
# Enables tracing via [tracy](https://github.com/wolfpld/tracy)
trace = ["bevy/trace_tracy", "dep:tracing"]
